--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "client",
+  "name": "ai-chatbot",
   "version": "1.0.0",
   "private": true,
   "homepage": "https://ranaafzal2150-ui.github.io/ai-chatbot",
